# Projects

./: README.md
automatedBackup/: README.md
remoteBoot/: README.md
website/: Cargo.toml  Dockerfile  README.md
