[package]
name = "crimson-website"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["limit", "set-header", "trace", "fs"] }
http = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ipnet = "2.9"
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
axum-client-ip = "0.6.0"
tower_governor = { version = "0.4.3", features = ["axum"] }
